# gdg-project-2025

./: README.md
backend/quiz-api/: .gitignore  README.md  auth.py  functions.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  vercel.json
backend/simulation-api/: README.md  frontend.html  functions.py  main.py  pyproject.toml  requirements.txt  vercel.json
frontend/gdg-nextjs_Auth_Learning/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/gdg-nextjs_Auth_Learning/src/app/: globals.css  layout.tsx  page.tsx
frontend/gdg-nextjs_Auth_Learning/src/app/auth/login/: page.tsx
frontend/gdg-nextjs_Auth_Learning/src/app/auth/signup/: page.tsx
frontend/gdg-nextjs_Auth_Learning/src/app/courses/: page.tsx
frontend/gdg-nextjs_Auth_Learning/src/app/investment-sandbox/: page.tsx
frontend/gdg-nextjs_Auth_Learning/src/app/investment-sandbox/simulation/: metrics-store.js  metrics-topbar.js  page.js  sandbox.js
frontend/gdg-nextjs_Auth_Learning/src/app/learning/: page.tsx
frontend/gdg-nextjs_Auth_Learning/src/app/onboarding/: page.tsx
frontend/gdg-nextjs_Auth_Learning/src/app/profile/: page.tsx
frontend/gdg-nextjs_Auth_Learning/src/components/: AuthProtectedTutor.tsx  GeneralChat.tsx  PersonalizedTutor.tsx  UserMenu.tsx  navbar.tsx  theme-provider.tsx
frontend/gdg-nextjs_Auth_Learning/src/components/ui/: button.tsx  toaster.tsx
frontend/gdg-nextjs_Auth_Learning/src/context/: AuthContext.tsx
frontend/gdg-nextjs_Auth_Learning/src/lib/: feedback.ts  firebase.ts  utils.ts
