[project]
name = "fin-api"
version = "0.1.0"
description = "API for Fin-tech Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "google-genai>=1.5.0",
    "mplfinance>=0.12.10b0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.54",
]
